[package]
name = "read-logger"
version = "0.1.0"
edition = "2021"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
description = "Wrap `Read` with a read statistics logger."
homepage = "https://github.com/pka/read-logger"
repository = "https://github.com/pka/read-logger"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["read"]

[dependencies]
log = "0.4.20"

[dev-dependencies]
env_logger = "0.10.0"
